# gigi

./: .bench_out.txt  .build_out.txt  .gitignore  .test_out.txt  BRAIN_PRIMITIVES_CONSUMER_GUIDE.md  CHANGELOG.md  CHAT_SCHEMA_HANDOFF.md  Cargo.toml  DOCUMENTATION_PLAN.md  Dockerfile  GIGI_ANOMALY_DASHBOARD_SPEC.md  GIGI_API.md  GIGI_AUDIT_RESULTS.md  GIGI_AUDIT_SPEC.md  GIGI_AUTOMATIC_ANALYTICS_API.md  GIGI_COHERENCE_EXTENSIONS_v0.1.md  GIGI_COMPETITIVE_ANALYSIS.md  GIGI_CRUD_ROADMAP.md  GIGI_DEPLOY_REQUEST.md  GIGI_DEPLOY_RESPONSE.md  GIGI_ENCRYPT_v0.3_SPRINT_SPEC.md  GIGI_ENTERPRISE_SPEC.md  GIGI_GEOMETRIC_ENCRYPTION_SPEC.md  GIGI_LANG_REPLY_FROM_ENGINE_2026-05-24.md  GIGI_LANG_SPEC.md  GIGI_OBSERVABILITY_SPEC.md  GIGI_PERF_ANALYSIS.md  GIGI_PERSISTENCE_UPGRADE_SPEC.md  GIGI_PRISM_INTEGRATION_SPEC.md  GIGI_PRODUCT_SPECS.md  GIGI_Provisional_Patent.tex  GIGI_SAMPLE_TRANSPORT_SPRINT_SPEC.md  GIGI_SCHEMA_INTROSPECTION_SPEC.md  GIGI_SHEETS_SPRINT_SPEC.md  GIGI_SHEETS_SPRINT_SPEC_ADDENDUM_v0.1.md  GIGI_SPEC_v0.1.md  GIGI_SUDOKU_SPRINT_SPEC.md  GIGI_TETMESH_SPEC_v0.6.md  GIGI_TOOL_AUDIT_2026-07-02.md  GIGI_TPCH_SPEC.md  (+46 more)
.github/workflows/: ci.yml  ci.yml.disabled  docker.yml
_local/: .gitignore  restore_jg_kv_post_encryption.mjs
bench_output/: thermalization_2026-06-19.txt
benches/: ingest_bench.rs  o1_proof.rs  replay_baseline_bench.rs  tpch_bench.rs
dashboard/: index.html
demos/: btc_crash.py  earthquake_feed.py  music_dna.py
docs/: CONSUMER_PATTERNS.md  CREATE_SESSION.md  DAVIS_CONJECTURE_LAMBDA_RIDEALONG.md  GETTING_STARTED.md  GIGI_HOSTING_ITSELF.md  HTTP_API_REFERENCE.md  STABILITY_GUARANTEES.md  index.html  package-lock.json  package.json  vite.config.js
docs/src/: App.jsx  (+1 more)
e2e/: anomaly_test.mjs  diagnose.mjs  encrypt_v02_live_test.mjs  package-lock.json  package.json  playwright.config.js  spike_test.mjs  spike_test2.mjs  spike_test_fixed.mjs  ws_test.mjs
examples/: attention_memory_demo.rs  bench_thermalization.rs  bench_thermalization_baseline.rs  brain_endpoints_smoke.py  brain_tour_demo.rs  causal_states_classifier_audit.rs  causal_states_orthogonality.rs  causal_states_scan.rs  cognitive_geometry_demo.rs  create_imagine_test_2d_bundle.py  dream_anisotropic_demo.rs  dream_demo.rs  imagine_co2_forward.rs  kahler_tour.rs  nasa_atmosphere.rs  predictive_coding_demo.rs  report_template.html  seed_demo_bundles.py  seed_tetmesh_demo.py  sharding_penguins.rs  tetmesh_class_descent.py  tetmesh_fiber_harness.py  tetmesh_visual.html
mcp/: README.md  pyproject.toml
mcp/examples/: claude_desktop_config.json  complex_demo.py  demo.py  seed_worldfacts.py
mcp/src/gigi_mcp/: __init__.py  config.py  server.py
mcp/tests/: test_smoke.py
mockups/: sheets.html
playground/: index.html  package-lock.json  package.json  vite.config.js
scripts/: HALCYON_POST_DEPLOY_PROBE_README.md  bench_circulation.py  bench_kaggle.py  bench_movielens.py  bench_prescribe.py  bench_solve.py  build_exercise_pages.py  full_sweep.py  halcyon_post_deploy_probe.ps1  halcyon_post_deploy_probe.sh  scan_fit.py  sdk_smoke.py  sdk_smoke.sh  sweep_results.json
sdk/notebook/: MVP_SCOPE.md  README.md  pyproject.toml
sdk/notebook/demo/: hello_gigi.ipynb
sdk/notebook/gigi_notebook/: __init__.py  __main__.py  install.py  kernel.py
sdk/notebook/tests/: test_live_commutator.py  test_renderers.py
sdk/python/: README.md  pyproject.toml
sdk/python/gigi/: __init__.py  client.py  lang.py  subscriber.py
sdk/python/tests/: test_client.py  test_lang_contract.py
sheets/: .env.example  .env.production.local  AIRTABLE_WORKFLOWS.md  CRAWLABILITY_SPEC.md  FEATURE_PARITY.md  FORMULAS_SPEC.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
site/: .gitignore  check_output.txt  index.html  package-lock.json  package.json  vercel.json  vite.config.js
src/: aggregate_helpers.rs  aggregation.rs  bundle.rs  chern_weil.rs  coherence.rs  concurrent.rs  convert.rs  credentials.rs  crypto.rs  curvature.rs  delegation.rs  dhoom.rs  dials.rs  edge.rs  engine.rs  explain.rs  gauge.rs  halcyon_gql_dispatch.rs  hash.rs  helicity.rs  holonomy_cycle.rs  ingest.rs  integrity.rs  invariant.rs  invariant_ring.rs  invariant_verify.rs  join.rs  lattice_delegation.rs  ledger.rs  lib.rs  main.rs  membership_index.rs  metric.rs  mlkem_delegation.rs  mmap_bundle.rs  morse_cache.rs  observability.rs  obstruction.rs  pairing_delegation.rs  parser.rs  (+14 more)
target_test/: .rustc_info.json
test_data/: employees.csv  roundtrip.json  sensor_data.dhoom  sensor_data.json
tests/: aurora_cubed_sphere_construction.rs  aurora_dec_operators.rs  aurora_lattice_registry_dispatch.rs  aurora_lie_poisson_trait.rs  aurora_phase_1b_lattice_verb_cubed_sphere.rs  aurora_phase_2_hamiltonian_registry.rs  aurora_phase_2_trait_surface.rs  aurora_signed_face_orientations.rs  aurora_topology_hint_table.rs  aurora_vertex_positions.rs  betti_pi1_basic.rs  causal_states_cv1_diagnostics.rs  causal_states_cv2_operators.rs  causal_states_cv3_commutator.rs  causal_states_cv4_regime.rs  causal_states_p4_1_invariants.rs  causal_states_p4_2_convergence.rs  causal_states_p4_3_orthogonality.rs  causal_states_p4_4_classifier.rs  causal_states_wire.rs  chern_class_basic.rs  chern_class_bundle_target_basic.rs  cognitive_geometry_endpoints_contract.rs  cognitive_geometry_real_data_smoke.rs  composition_v0_3.rs  create_session_verb.rs  credentials_v0_4.rs  cubic_lattice.rs  curvature_api.rs  davis_conjecture_lambda.rs  davis_conjecture_lambda_brain_ridealong.rs  delegation_v0_3.rs  dhoom_wire_savings.rs  emit_csv.rs  encoder_high_dim_smoke.rs  engine_open_memory.rs  engine_open_mmap_orphan.rs  explain_batch.rs  explain_errors.rs  explain_kappa.rs  (+118 more)
theory/: REPLY_TO_P1_P2_SHIPPED_LETTER_2026-05-25.md  SPECS_INDEX.md  branch_x_information_geometry.tex  cosmological_nondecoupling_v2.tex  davis_hilbert_polya.tex  field_equations_semantic_coherence.tex  geodesic_computation_v7_1.tex  rg_branch.tex  sheaf_branch.tex  spectral_branch.tex  spectral_retrieval.tex  statistical_mechanics_branch.tex  the_geometry_of _sameness.tex
(+1548 files in other folders)
