[package]
name = "gigi"
version = "0.1.0"
edition = "2021"
description = "Geometric Intrinsic Global Index — fiber-bundle database engine"
authors = ["Bee Rosa Davis <davis@davisgeometric.com>"]
license = "MIT"
default-run = "gigi"
autoexamples = false
autobenches = false

# ── Feature flags ──
#
# `kahler` — opt-in Kähler-geometry substrate (catalog.md §1, the
# generator 𝒢 = (M, g, J, ∇, B, Γ)). When ON, BundleSchema gains an
# optional `KahlerStructure` field carrying a complex structure J and
# a closed 2-form B; the new `gigi::geometry` module provides the
# math. When OFF, the engine compiles and runs exactly as before —
# this upgrade is strictly additive. See
# `theory/kahler_upgrade/IMPLEMENTATION_PLAN.md` for the rollout
# layers.
[features]
default = []
kahler = []

[dependencies]
roaring = "0.10"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
# v0.2 GIGI Encrypt — Sprint B (OPAQUE / AES-GCM-SIV) and Sprint C (INDEXED / AES-256-CMAC).
# RustCrypto suite, all NIST-standardized primitives, in-tree active maintenance.
aes = "0.8"
aes-gcm-siv = "0.11"
cmac = "0.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
nalgebra = "0.33"
memmap2 = "0.9"
libc = "0.2"
base64 = "0.22"
instant-distance = "0.6"
uuid = { version = "1", features = ["v4"] }
# Phase B multi-tenant: HMAC-SHA256 verification of compact signed
# tokens minted by davisgeometric.com. Engine extracts {namespace,
# owner, exp} from each token to enforce per-tenant bundle isolation.
hmac = "0.12"
sha2 = "0.10"

[[bin]]
name = "gigi-convert"
path = "src/bin/gigi_convert.rs"

[[bin]]
name = "gigi-server"
path = "src/bin/gigi_server.rs"

[[bin]]
name = "gigi-stream"
path = "src/bin/gigi_stream.rs"

[[bin]]
name = "gigi-edge"
path = "src/bin/gigi_edge.rs"

[[bin]]
name = "gigi-stress"
path = "src/bin/gigi_stress.rs"

[[bin]]
name = "bench_o1"
path = "benches/o1_proof.rs"

[[bin]]
name = "bench_ingest"
path = "benches/ingest_bench.rs"

[[bin]]
name = "bench_tpch"
path = "benches/tpch_bench.rs"

[[bin]]
name = "nasa_atmo"
path = "examples/nasa_atmosphere.rs"

[[bin]]
name = "kahler_tour"
path = "examples/kahler_tour.rs"
required-features = ["kahler"]

[[bin]]
name = "predictive_coding_demo"
path = "examples/predictive_coding_demo.rs"
required-features = ["kahler"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
