[package]
name = "gigi"
version = "0.1.0"
edition = "2021"
description = "Geometric Intrinsic Global Index — fiber-bundle database engine"
authors = ["Bee Rosa Davis <davis@davisgeometric.com>"]
# PolyForm Noncommercial License 1.0.0. Not in SPDX's standard list, so
# we reference the LICENSE file directly. Commercial use is reserved by
# the copyright holder — see the README's "License & commercial use"
# section for the commercial-licensing route.
license-file = "LICENSE"
default-run = "gigi"
autoexamples = false
autobenches = false

# ── Feature flags ──
#
# `kahler` — opt-in Kähler-geometry substrate (catalog.md §1, the
# generator 𝒢 = (M, g, J, ∇, B, Γ)). When ON, BundleSchema gains an
# optional `KahlerStructure` field carrying a complex structure J and
# a closed 2-form B; the new `gigi::geometry` module provides the
# math. When OFF, the engine compiles and runs exactly as before —
# this upgrade is strictly additive. See
# `theory/kahler_upgrade/IMPLEMENTATION_PLAN.md` for the rollout
# layers.
[features]
default = []
kahler = []

# `sharded` — opt-in atlas-cover sharding model. When ON, the new
# `gigi::sharded` module is compiled, providing ChartId, ShardId,
# Atlas, Transition, SpectralRegime, and the Clean Finger Move
# write-conflict resolver. Phase A is a skeleton -- types are
# defined but execution bodies are `todo!()` until Phase B integrates
# with BundleStore. See `theory/poincare_to_sharding/SHARDING_SPEC.md`
# for the full design.
sharded = []

# `imagine` — opt-in extrapolation verbs (IMAGINE / WALK). When ON,
# the `gigi::imagine` module is compiled, providing ImaginedRecord +
# required provenance type, imagine_geodesic (RK4 integrator validated
# by T11), imagine_halo (gauge-equivariance proof for sharded
# CURVATURE per T12), and walk/coherence stubs for Phase 2.
# See `theory/imagine/IMAGINE_AND_WALK.md` for the full design with
# Marcella's trust-envelope embedded.
imagine = []

# `transactions` — opt-in atomic sheaf commits (cross-bundle ACID +
# 3 GIGI-specific invariants: cocycle bound, K-monotone, connection-
# coherent). Phase 1 ships 2PC + coordinator/participant recovery
# (gates TX1-TX5). When ON, the `gigi::transactions` module compiles
# with TransactionId, Coordinator, Participant, the global tx log,
# and the BEGIN/COMMIT/ROLLBACK HTTP + GQL surface. When OFF, the
# engine compiles and behaves exactly as before.
# See `theory/transactions/ATOMIC_SHEAF_COMMIT_SPEC.md` for the
# full 4-phase design.
transactions = []

# Ask G — Patterns. Per `theory/scj/PATTERN_HUNT_SPEC_v0.1.md`.
# When ON, the `gigi::parser` module accepts DEFINE PATTERN / HUNT /
# DROP PATTERN / SHOW PATTERNS / EXCLUDING IN. Phase 1 ships the
# parser-only surface (gates PH1–PH4). Subsequent phases add the
# in-memory registry, HUNT executor with WEIGHT evaluation,
# EXCLUDING IN anti-join via Roaring bitmap difference, sharded
# HUNT, and finally graduation onto a `gigi_patterns` bundle.
# When OFF, the engine compiles and behaves exactly as before
# (PH4 is enforced by Cargo's feature isolation).
patterns = []

# `causal_states` — opt-in update commutator substrate. When ON, the
# new `gigi::causal_states` module provides:
#   - TV / Hellinger / KL scalar diagnostics on discrete distributions
#   - Update operator trait + composition for two-step belief updates
#   - Commutator computation U_{ab}(p) - U_{ba}(p) with regime classifier
# Companion to Davis (2026) "Causal States as Predictive Sections."
# Python math companion: theory/causal_states/validation_tests.py (36/36
# green); spec at theory/causal_states/SPEC_v0.1_COMMUTATOR.md.
# When OFF, the engine compiles and behaves exactly as before.
causal_states = []

# `lattice` — opt-in graph-topology primitive (vertices + signed
# edges + face-cycle table + topology hint). General-purpose; Halcyon's
# Davis Wilson Lattice substrate is the first consumer but the type
# is not Halcyon-specific. Enables `gigi::lattice` (with the in-memory
# registry + canonical-graph constructors like the truncated icosahedron
# / buckyball) and the `LATTICE` GQL verb in `src/parser.rs`. When OFF
# the engine compiles and behaves exactly as before. See
# `HALCYON_PART_I_GATES.md` for the originating gate breakdown.
lattice = []
#
# `gauge` — opt-in group-erased connection algebra: `GroupElement`
# (SU(2) ships with math; U(1) / Z_N compile but panic at use site),
# `EdgeConnection` trait, and the generalized `walk_loop` holonomy
# walker. Lives in `gigi::gauge` alongside the existing schema-
# migration `GaugeTransform`. Depends on `lattice` because the walker
# reads edges + orientations off a `Lattice`. General gauge-theory
# primitive — not Halcyon-specific.
gauge = ["lattice"]
#
# `halcyon` — composite feature for the Halcyon Davis Wilson Lattice
# substrate. Pulls in `lattice + gauge` (the general primitives) and
# additionally enables the Halcyon-specific bit-identity integration
# test against the U_final / face-holonomy gold fixtures under
# `tests/fixtures/halcyon/`. See `HALCYON_PART_I_GATES.md` Part I scope
# and `theory/halcyon/HALCYON_PART_I_IMPLEMENTATION_LOG.md` for the
# per-gate receipts.
halcyon = ["lattice", "gauge"]

# `wish` — opt-in boundary-value-problem geodesic verb. When ON, the
# `gigi::imagine::wish` module is compiled, providing WishConfig,
# WishOutcome (Granted / Unreachable / Indeterminate verdict trichotomy
# per SUDOKU §11), WishError, the SolverKind enum (Relaxation default
# + Shooting for low-dim conjugacy), and the WishMetric2D trait used
# by the toy validation manifolds. Implies `imagine` because wished
# records ride on the existing ImaginedProvenance::Wished variant.
# Spec at theory/imagine/WISH_SPEC_v0.1.md; W-math at
# theory/imagine/validation/wish_validation.py (W1-W5 green 2026-06-10).
# When OFF, the engine compiles and behaves exactly as before.
wish = ["imagine"]

[dependencies]
# `tempfile` promoted from dev-dependency to normal dependency for
# `Engine::open_memory()` (AURORA Phase 3, 2026-06-22). The constructor
# owns a `tempfile::TempDir` so dev/CI/aurora-server harnesses can spin
# up persistence-free engines without their own tempdir boilerplate.
tempfile = "3"
roaring = "0.10"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
# v0.2 GIGI Encrypt — Sprint B (OPAQUE / AES-GCM-SIV) and Sprint C (INDEXED / AES-256-CMAC).
# RustCrypto suite, all NIST-standardized primitives, in-tree active maintenance.
aes = "0.8"
aes-gcm-siv = "0.11"
cmac = "0.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
nalgebra = "0.33"
memmap2 = "0.9"
libc = "0.2"
base64 = "0.22"
instant-distance = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
# Phase B multi-tenant: HMAC-SHA256 verification of compact signed
# tokens minted by davisgeometric.com. Engine extracts {namespace,
# owner, exp} from each token to enforce per-tenant bundle isolation.
hmac = "0.12"
sha2 = "0.10"
# v0.3 GIGI Encrypt — Sprint I (Curvature-MAC integrity-key derivation)
# and forthcoming Sprint M (continuous KDF chain). HKDF-SHA256 per
# Krawczyk CRYPTO 2010; domain-separates the integrity key from the
# gauge key via a fixed salt (`"gigi-integrity-v1"`).
hkdf = "0.12"
# v0.3 GIGI Encrypt — Sprint L (Čech threshold sharing): Shamir over the
# secp256k1 base field F_p, p = 2^256 - 2^32 - 977. We don't need EC
# operations, just constant-time prime-field arithmetic; num-bigint
# already transits the dep tree so we surface it directly.
num-bigint = "0.4"
num-traits = "0.2"
# v0.3.x GIGI Encrypt — Sprint J.2 (Pairing-based collusion-resistant
# delegation). Ateniese–Hohenberger 2005 PRE construction over BLS12-381:
# pk = e(g1,g2)^sk ∈ Gt, capability rk = g2^{sk_B/sk_A} ∈ G2, collusion
# resistance reduces to discrete log on G2 (~2^128 work).
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
# v0.3.x GIGI Encrypt — Sprint J.3 (ML-KEM trusted-delegatee delegation).
# FIPS 203 (NIST PQ standard, formerly CRYSTALS-Kyber). Post-quantum
# IND-CCA KEM under the MLWE assumption. Closes the BLS12-381 quantum
# gap for the trusted-delegatee threat model.
ml-kem = "0.2"
kem = "=0.3.0-pre.0"
hybrid-array = "0.2.0-rc.9"
# Halcyon ITEM 3.2 — INGEST executor: reads NumPy .npy and .npz archives
# and maps each outer-axis slice to a Record for engine.batch_insert.
# `npz` feature pulls in the `zip` crate (the only net-new transitive
# surface) — required because Halcyon's harvest format is a zip-wrapped
# collection of .npy arrays. Default-features=false keeps the surface
# tight: we only ship file-reading; serialization features (complex,
# half, derive) are off.
npyz = { version = "0.8", default-features = false, features = ["npz"] }

[[bin]]
name = "gigi-convert"
path = "src/bin/gigi_convert.rs"

[[bin]]
name = "gigi-server"
path = "src/bin/gigi_server.rs"

[[bin]]
name = "gigi-stream"
path = "src/bin/gigi_stream.rs"

[[bin]]
name = "gigi-edge"
path = "src/bin/gigi_edge.rs"

[[bin]]
name = "gigi-stress"
path = "src/bin/gigi_stress.rs"

[[bin]]
name = "bench_o1"
path = "benches/o1_proof.rs"

[[bin]]
name = "bench_ingest"
path = "benches/ingest_bench.rs"

[[bin]]
name = "bench_tpch"
path = "benches/tpch_bench.rs"

[[bin]]
name = "nasa_atmo"
path = "examples/nasa_atmosphere.rs"

[[bin]]
name = "kahler_tour"
path = "examples/kahler_tour.rs"
required-features = ["kahler"]

[[bin]]
name = "predictive_coding_demo"
path = "examples/predictive_coding_demo.rs"
required-features = ["kahler"]

[[bin]]
name = "attention_memory_demo"
path = "examples/attention_memory_demo.rs"
required-features = ["kahler"]

# Branch VII — Cognitive Geometry verbs JTBD demo. Two-bundle
# comparison (peaceful real sensor data vs synthetic volatile
# trace) exercising CAPACITY / HORIZON / DEPTH end-to-end with
# concrete routing decisions printed for each bundle.
[[bin]]
name = "cognitive_geometry_demo"
path = "examples/cognitive_geometry_demo.rs"
required-features = ["kahler"]

[[bin]]
name = "dream_demo"
path = "examples/dream_demo.rs"
required-features = ["kahler"]

[[bin]]
name = "dream_anisotropic_demo"
path = "examples/dream_anisotropic_demo.rs"
required-features = ["kahler"]

[[bin]]
name = "brain_tour_demo"
path = "examples/brain_tour_demo.rs"
required-features = ["kahler"]

# Sharding demo on real public data (Palmer Penguins, CC-0).
# Reads gigi::sharded::* end-to-end on a 3-species bundle:
# unsharded baseline → hash-shard with n=3 → check T3 invariance →
# explicit Möbius cross-chart loop → det(H) = -1 (T13).
[[bin]]
name = "sharding_penguins"
path = "examples/sharding_penguins.rs"
required-features = ["kahler", "sharded"]

# IMAGINE demo on real public data (NOAA Mauna Loa CO₂, public domain).
# Three live trajectory shapes against a 60-month observation bundle:
# default-budget honest refusal → constant-K calm projection → the
# is_imagined() audit on every returned point.
[[bin]]
name = "imagine_co2_forward"
path = "examples/imagine_co2_forward.rs"
required-features = ["kahler", "imagine"]

# Causal States Phase 3 — empirical (α, β)-scan for the paper.
# Generates the scatter-plot CSV + summary report. Smooth-regime closed-
# form Eq 6.4 residual goes to machine precision; sofic anchor (Even
# Process) lands KL Divergent at TV=1. See examples/causal_states_scan.rs.
[[bin]]
name = "causal_states_scan"
path = "examples/causal_states_scan.rs"
required-features = ["causal_states"]

# Causal States Phase 4.3 — orthogonality scan (TH1 empirical evidence).
# Writes (H[X], |Ω|) across iid Bernoulli, symmetric HMM, and Even
# Process. Demonstrates two processes with matched H[X] can have
# opposite |Ω|. See examples/causal_states_orthogonality.rs.
[[bin]]
name = "causal_states_orthogonality"
path = "examples/causal_states_orthogonality.rs"
required-features = ["causal_states"]

# Causal States Phase 4.4 — classifier audit (confusion matrix).
# Generates the formal regime-classifier confusion matrix on labeled
# processes for the paper's appendix. See
# examples/causal_states_classifier_audit.rs.
[[bin]]
name = "causal_states_classifier_audit"
path = "examples/causal_states_classifier_audit.rs"
required-features = ["causal_states"]

# Local profile of GIBBS_SAMPLE β=2.5 N_SWEEPS=200 SEED=20260616 on the
# truncated-icosahedron buckyball. Times the production sweep plus three
# micro-benches (staple walker, KP draw, mutex lock) so the per-phase
# cost breakdown is legible. Run with:
#   cargo run --release --features halcyon --example bench_thermalization
[[example]]
name = "bench_thermalization"
path = "examples/bench_thermalization.rs"
required-features = ["halcyon"]

# Sprint A baseline harness for the face_edges + measurement_history hoist.
# 3 warmup + 5 timed iterations of GIBBS_SAMPLE β=2.5 N_SWEEPS=200
# SEED=20260616 on the buckyball; reports wall-clock mean/min plus the
# final MeanPlaquette[199] checksum used for the bit-identity receipt. Run:
#   cargo run --release --features halcyon --example bench_thermalization_baseline
[[example]]
name = "bench_thermalization_baseline"
path = "examples/bench_thermalization_baseline.rs"
required-features = ["halcyon"]

# Perfect-Identity Corollary 4.2 — IGS GNSS Earth-geodesic transport.
# Parallel-transports an SU(2) frame around the great-circle triangle
# formed by IGS stations PIE1 / KOKB / ALGO on a cubed-sphere (C=32) and
# compares the holonomy rotation angle against Girard's analytic excess
# A/R². Writes papers/perfect_identity/empirical/gnss_geodesic_results.json.
# Run with:
#   cargo run --release --features lattice --example gnss_geodesic
[[example]]
name = "gnss_geodesic"
path = "examples/gnss_geodesic.rs"
required-features = ["lattice"]

[dev-dependencies]
rand = "0.8"
# `tempfile` is declared under `[dependencies]` (see comment there);
# kept available to dev-dep contexts automatically via cargo's
# dependency resolution — no separate dev-dep entry needed.
# In-process axum router driving for the TDD-HAL-II.6 HTTP gate. Tower
# is already a transitive dep through axum; surfacing it directly gives
# the test crate `tower::ServiceExt::oneshot`. `http-body-util` lets the
# same test collect the response body without spinning up a real
# listener.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
