[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gigi-notebook"
version = "0.1.0"
description = "Jupyter kernel for GIGI — write GQL in cells, get geometric results back"
readme = "README.md"
authors = [{name = "Bee Rosa Davis", email = "bee_davis@alumni.brown.edu"}]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel >= 6.0",
    "requests >= 2.28",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0"]

[project.scripts]
gigi-notebook-install = "gigi_notebook.install:main"

[tool.setuptools]
packages = ["gigi_notebook"]
