[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigi-client"
version = "0.8.0"
description = "Python client for GIGI — Geometric Intrinsic Global Index"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Davis Geometric", email = "davis@davisgeometric.com" }]
keywords = ["database", "geometry", "fiber-bundle", "curvature", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "websockets>=12.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "responses>=0.25"]

[project.urls]
Homepage = "https://davisgeometric.com/gigi"
Repository = "https://github.com/nurdymuny/gigi"
Documentation = "https://davisgeometric.com/gigi/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigi*"]
